# pez-solochain-template

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
docs/: rust-setup.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: genesis_config_presets.rs  lib.rs
