[workspace.package]
license = "MIT-0"
authors = ["PezkuwiChain <admin@pezkuwichain.io>"]
homepage = "https://pezkuwichain.github.io/pezkuwi-sdk/"
repository = "https://github.com/pezkuwichain/pez-solochain-template.git"
edition = "2021"

[workspace]
members = [
    "node",
    "pallets/template",
    "runtime",
]
resolver = "2"

[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }
correctness = { level = "warn", priority = 1 }
complexity = { level = "warn", priority = 1 }
if-same-then-else = { level = "allow", priority = 2 }
zero-prefixed-literal = { level = "allow", priority = 2 }
type_complexity = { level = "allow", priority = 2 }
nonminimal-bool = { level = "allow", priority = 2 }
borrowed-box = { level = "allow", priority = 2 }
too-many-arguments = { level = "allow", priority = 2 }
needless-lifetimes = { level = "allow", priority = 2 }
unnecessary_cast = { level = "allow", priority = 2 }
identity-op = { level = "allow", priority = 2 }
useless_conversion = { level = "allow", priority = 2 }
unit_arg = { level = "allow", priority = 2 }
option-map-unit-fn = { level = "allow", priority = 2 }
bind_instead_of_map = { level = "allow", priority = 2 }
erasing_op = { level = "allow", priority = 2 }
eq_op = { level = "allow", priority = 2 }
while_immutable_condition = { level = "allow", priority = 2 }
needless_option_as_deref = { level = "allow", priority = 2 }
derivable_impls = { level = "allow", priority = 2 }
stable_sort_primitive = { level = "allow", priority = 2 }
extra-unused-type-parameters = { level = "allow", priority = 2 }
default_constructed_unit_structs = { level = "allow", priority = 2 }
self-named-module-files = { level = "allow", priority = 2 }

[workspace.dependencies]
# Local crates
pez-solochain-template-runtime = { path = "./runtime", default-features = false }
pezpallet-template = { path = "./pallets/template", default-features = false }

# External crates
clap = { version = "4.5" }
codec = { version = "3.7", default-features = false, package = "parity-scale-codec" }
futures = { version = "0.3" }
jsonrpsee = { version = "0.24" }
log = { version = "0.4", default-features = false }
scale-info = { version = "2.11", default-features = false }
serde_json = { version = "1.0", default-features = false }

# Pezkuwi SDK dependencies (path to local pezkuwi-sdk - update to git/crates.io when published)
pezframe-benchmarking = { version = "28.0.0", default-features = false }
pezframe-benchmarking-cli = { version = "32.0.1" }
pezframe-executive = { version = "28.0.0" , default-features = false }
pezframe-metadata-hash-extension = { version = "0.1.0" , default-features = false }
pezframe-support = { version = "28.0.0" , default-features = false }
pezframe-system = { version = "28.0.0" , default-features = false }
pezframe-system-benchmarking = { version = "28.0.0" , default-features = false }
pezframe-system-rpc-runtime-api = { version = "26.0.0" , default-features = false }
pezframe-try-runtime = { version = "0.34.0" , default-features = false }

pezpallet-aura = { version = "27.0.0" , default-features = false }
pezpallet-balances = { version = "28.0.0" , default-features = false }
pezpallet-grandpa = { version = "28.0.0" , default-features = false }
pezpallet-sudo = { version = "28.0.0" , default-features = false }
pezpallet-timestamp = { version = "27.0.0" , default-features = false }
pezpallet-transaction-payment = { version = "28.0.0" , default-features = false }
pezpallet-transaction-payment-rpc = { version = "30.0.0" }
pezpallet-transaction-payment-rpc-runtime-api = { version = "28.0.0" , default-features = false }

pezsc-basic-authorship = { version = "0.34.0" }
pezsc-cli = { version = "0.36.0" }
pezsc-client-api = { version = "28.0.0" }
pezsc-consensus = { version = "0.33.0" }
pezsc-consensus-aura = { version = "0.34.0" }
pezsc-consensus-grandpa = { version = "0.19.0" }
pezsc-executor = { version = "0.32.0" }
pezsc-network = { version = "0.34.0" }
pezsc-offchain = { version = "29.0.0" }
pezsc-service = { version = "0.35.0" }
pezsc-telemetry = { version = "15.0.0" }
pezsc-transaction-pool = { version = "28.0.0" }
pezsc-transaction-pool-api = { version = "28.0.0" }

pezsp-api = { version = "26.0.0" , default-features = false }
pezsp-block-builder = { version = "26.0.0" , default-features = false }
pezsp-blockchain = { version = "28.0.0" , default-features = false }
pezsp-consensus-aura = { version = "0.32.0" , default-features = false }
pezsp-consensus-grandpa = { version = "13.0.0" , default-features = false }
pezsp-core = { version = "28.0.0" , default-features = false }
pezsp-genesis-builder = { version = "0.8.0" , default-features = false }
pezsp-inherents = { version = "26.0.0" , default-features = false }
pezsp-io = { version = "30.0.0" , default-features = false }
pezsp-keyring = { version = "31.0.0" , default-features = false }
pezsp-offchain = { version = "26.0.0" , default-features = false }
pezsp-runtime = { version = "31.0.1" , default-features = false }
pezsp-session = { version = "27.0.0" , default-features = false }
pezsp-storage = { version = "19.0.0" , default-features = false }
pezsp-timestamp = { version = "26.0.0" , default-features = false }
pezsp-transaction-pool = { version = "26.0.0" , default-features = false }
pezsp-version = { version = "29.0.0" , default-features = false }

bizinikiwi-build-script-utils = { version = "11.0.0" }
bizinikiwi-frame-rpc-system = { version = "28.0.0" }
bizinikiwi-wasm-builder = { version = "17.0.0" }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
