[package]
name = "pez-solochain-template-node"
description = "A solochain node template built with Bizinikiwi, part of Pezkuwi Sdk."
version = "0.0.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

build = "build.rs"
documentation = "https://docs.rs/pez-solochain-template-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
clap = { features = ["derive"], workspace = true }
futures = { features = ["thread-pool"], workspace = true }
jsonrpsee = { features = ["server"], workspace = true }

# bizinikiwi client
pezsc-basic-authorship = { workspace = true, default-features = true }
pezsc-cli = { workspace = true, default-features = true }
pezsc-client-api = { workspace = true, default-features = true }
pezsc-consensus = { workspace = true, default-features = true }
pezsc-consensus-aura = { workspace = true, default-features = true }
pezsc-consensus-grandpa = { workspace = true, default-features = true }
pezsc-executor = { workspace = true, default-features = true }
pezsc-network = { workspace = true, default-features = true }
pezsc-offchain = { workspace = true, default-features = true }
pezsc-service = { workspace = true, default-features = true }
pezsc-telemetry = { workspace = true, default-features = true }
pezsc-transaction-pool = { workspace = true, default-features = true }
pezsc-transaction-pool-api = { workspace = true, default-features = true }
pezsp-consensus-aura = { workspace = true, default-features = true }
pezsp-core = { workspace = true, default-features = true }
pezsp-genesis-builder = { workspace = true, default-features = true }

# bizinikiwi primitives
pezsp-api = { workspace = true, default-features = true }
pezsp-block-builder = { workspace = true, default-features = true }
pezsp-blockchain = { workspace = true, default-features = true }
pezsp-inherents = { workspace = true, default-features = true }
pezsp-io = { workspace = true, default-features = true }
pezsp-keyring = { workspace = true, default-features = true }
pezsp-runtime = { workspace = true, default-features = true }
pezsp-timestamp = { workspace = true, default-features = true }

# pezframe and pezpallets
bizinikiwi-frame-rpc-system = { workspace = true, default-features = true }
pezframe-metadata-hash-extension = { workspace = true, default-features = true }
pezframe-system = { workspace = true, default-features = true }
pezpallet-transaction-payment = { workspace = true, default-features = true }
pezpallet-transaction-payment-rpc = { workspace = true, default-features = true }

# These dependencies are used for runtime benchmarking
pezframe-benchmarking-cli = { workspace = true, default-features = true }

# Local Dependencies
pez-solochain-template-runtime = { workspace = true }

[build-dependencies]
bizinikiwi-build-script-utils = { workspace = true, default-features = true }

[features]
default = ["std"]
std = ["pez-solochain-template-runtime/std"]
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"bizinikiwi-frame-rpc-system/runtime-benchmarks",
	"pez-solochain-template-runtime/runtime-benchmarks",
	"pezframe-benchmarking-cli/runtime-benchmarks",
	"pezframe-benchmarking-cli/storage-benchmark",
	"pezframe-metadata-hash-extension/runtime-benchmarks",
	"pezframe-system/runtime-benchmarks",
	"pezpallet-transaction-payment-rpc/runtime-benchmarks",
	"pezpallet-transaction-payment/runtime-benchmarks",
	"pezsc-basic-authorship/runtime-benchmarks",
	"pezsc-cli/runtime-benchmarks",
	"pezsc-client-api/runtime-benchmarks",
	"pezsc-consensus-aura/runtime-benchmarks",
	"pezsc-consensus-grandpa/runtime-benchmarks",
	"pezsc-consensus/runtime-benchmarks",
	"pezsc-executor/runtime-benchmarks",
	"pezsc-network/runtime-benchmarks",
	"pezsc-offchain/runtime-benchmarks",
	"pezsc-service/runtime-benchmarks",
	"pezsc-transaction-pool-api/runtime-benchmarks",
	"pezsc-transaction-pool/runtime-benchmarks",
	"pezsp-api/runtime-benchmarks",
	"pezsp-block-builder/runtime-benchmarks",
	"pezsp-blockchain/runtime-benchmarks",
	"pezsp-consensus-aura/runtime-benchmarks",
	"pezsp-genesis-builder/runtime-benchmarks",
	"pezsp-inherents/runtime-benchmarks",
	"pezsp-io/runtime-benchmarks",
	"pezsp-keyring/runtime-benchmarks",
	"pezsp-runtime/runtime-benchmarks",
	"pezsp-timestamp/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"pez-solochain-template-runtime/try-runtime",
	"pezframe-system/try-runtime",
	"pezpallet-transaction-payment/try-runtime",
	"pezsp-runtime/try-runtime",
]
